fix layout issue

--- a/css/frontend.css
+++ b/css/frontend.css
@@ -30,7 +30,7 @@ table.entry-detail-view td{
     width: 100%;
 }
 #poststuff #post-body.columns-2 {
-    margin-right: 300px;
+    margin-right: 280px;
 }
 
 #poststuff .postbox-container {
